--- a/Styles/my_theme.css
+++ b/Styles/my_theme.css
@@ -15,10 +15,14 @@ p, ul {
 .white {
 	color: white;
 }
+
 .border {
-	margin-left: 1em; 
 	font-size: 140%; 
 	border-style: solid; 
 	border-width: 1px; 
 	padding: 10px;
+}
+
+.tab {
+	margin-left: 1em;
 }
